FIXED one minor text wrapping style

--- a/src/styles/players.css
+++ b/src/styles/players.css
@@ -113,7 +113,7 @@
 		left: 50%;
 		transform: translateX(-50%);
 		margin-top: 0.5rem;
-		width: 100%;
+		width: max-content;
 		font-family: sans-serif;
 		font-size: 0.65rem;
 		font-weight: 400;
